--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>JavaScript Variable</title>
 </head>
 <body>
-    <h1>JavaScriptVariable</h1>
+    <h1>JavaScript</h1>
     <script src="js/script.js"></script>
 </body>
 </html>
