--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Variable</title>
+    <title>JavaScript</title>
 </head>
 <body>
-    <h1>JavaScript</h1>
+    <h1>Rieme Hasan</h1>
+
     <script src="js/script.js"></script>
 </body>
 </html>
